<resources>
    <string name="app_name">Suggestions</string>

    <string name="toast_error">Ошибка подключения к серверу. Проверьте настройки сети или повторите попытку позже.</string>

    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Отмена</string>

    //SplashActivity
    <string name="image_splash">Splash image</string>

    //navigation menu
    <string name="drawer_menu_home">Главная</string>
    <string name="drawer_menu_email">Написать разработчику</string>
    <string name="drawer_menu_exit">Выход</string>
    <string name="drawer_menu_info">О приложении</string>
    <string name="menu_bookmark_selected">Избранная</string>
    <string name="menu_bookmark_unselected">Не избранная</string>
    <string name="menu_bookmark_share">Share</string>

    <string name="image_description">nav_app_icon</string>

    //MainActivity
    <string name="send_email_chooser_title">Send Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //SearchFragment
    <string name="input_suggestions">Поиск контрагента</string>
    <string name="name_or_inn">Наименование/ИНН</string>
    <string name="button_open_bookmarks">Недавние и избранные</string>

    //DetailActivity
    <string name="value_name_filter">Организация: %1$s</string>
    <string name="kpp_name_filter">КПП: %1$s</string>
    <string name="inn_name_filter">ИНН: %1$s</string>
    <string name="ogrn_name_filter">ОГРН: %1$s</string>
    <string name="status_name_filter">Статус: %1$s</string>
    <string name="address_name_filter">Адресс: %1$s</string>
    <string name="delete_recent">Удалить из недавних</string>
    <string name="open_map">На карте</string>
    <string name="detail_activity_title">Описание</string>
    <string name="share_fragment_title">Отправка</string>
    <string name="share_fragment_message">Поделиться информацией?</string>
    <string name="sending_date_title">Организация - информация</string>

    //MapActivity
    <string name="map_activity_title">Карта</string>

    //AboutFragment
    <string name="about_app_text">Приложение предназначено для быстрого поиска контрагента,
        нахождение его местоположения и сохранения для быстрого нахождения в последующем</string>
    <string name="author_email">По всем вопросам пишите на: eeyyon@gmail.com</string>

    //BookmarksActivity
    <string name="bookmarks_activity_title">Избранные и недавние</string>
    <string name="icon_star_is_bookmark">Избранная</string>
    <string name="bookmarks_list_empty">Список недавних и избранных пуст</string>
    <string name="search">Поиск</string>
    <string name="success_delete_from_bookmark">Организация успешно удалена</string>

</resources>
